New TSPLib problems now availables in the frontend.
